novos arquivos adicionados

--- a/desafios/d005/index.html
+++ b/desafios/d005/index.html
@@ -12,14 +12,14 @@
     <h2>Quem sou eu?</h2>
     <img src="imagens/thalita-150.jpg" alt="Foto Thalita">
     <p>
-    Olá! Me chamo <b>Thalita Timoteo</b> e tenho 24 anos. <br>Estou fazendo uma transição de carreira, saindo da produção para área da tecnologia. Atualmente trabalho na Nestlé, estou a quase 5 anos nessa empresa, porém desejo conseguir um estágio e me dedicar mais aos estudos da programação. <br> Quando comecei a estudar não entendia quase nada, porém sempre achei interessante, mas não me achava capaz. <br> Quando meu marido me incentivou e disse que era possível sim aprender e pela motivação de outras pessoas, eu decidi começar a faculdade e a realizar meus estudos sozinha. <br> Hoje, amo tudo o que estou aprendendo e desejo a cada dia mais me desenvolver e adquirir conhecimento.
+    Olá! Me chamo <b>Thalita Moura</b> e tenho 24 anos. <br>Estou fazendo uma transição de carreira, saindo da produção para área da tecnologia. Atualmente trabalho na Nestlé, estou a quase 5 anos nessa empresa, porém desejo conseguir um estágio e me dedicar mais aos estudos da programação. <br> Quando comecei a estudar não entendia quase nada, porém sempre achei interessante, mas não me achava capaz. <br> Quando meu marido me incentivou e disse que era possível sim aprender e pela motivação de outras pessoas, eu decidi começar a faculdade e a realizar meus estudos sozinha. <br> Hoje, amo tudo o que estou aprendendo e desejo a cada dia mais me desenvolver e adquirir conhecimento.
     </p>
     <h2>Como falar comigo?</h2>
     <ul>
          <li><img src="imagens/icone-linkedin.png" alt="LinkedIn"><a href="https://www.linkedin.com/in/thalita-passos-moura/" target="_blank" rel="external"> /thalitamoura</a> - Me adiciona no LinkedIn</li>
+         <li><img src="imagens/icone-github.png" alt="GitHub"><a href="https://github.com/thalitamoura" target="_blank" rel="external"> /thalitamoura</a> - Me acompanha lá no GitHub</li>
         <li><img src="imagens/icone-facebook.png" alt="Facebook"><a href="https://www.facebook.com/thalita.moura.14/" target="_blank" rel="external"> /thalitatimoteo</a> - Me acompanha lá no Facebook</li>
        <li><img src="imagens/icone-instagram.png" alt="Instagram"><a href="https://www.instagram.com/thalita_timoteo/" target="_blank" rel="external"> /thalita_timoteo</a> - Me acompanha lá no Instagram</li>
-       <li><img src="imagens/icone-github.png" alt="GitHub"></li>
     </ul>
 </body>
 </html>
